src/objects/EFRow__c.object
<CustomObject>
    <fields>
        <fullName>EFSheet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EF Sheet</label>
        <referenceTo>EFSheet__c</referenceTo>
        <relationshipLabel>EF Rows</relationshipLabel>
        <relationshipName>EFRows</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFStyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EF Style</label>
        <referenceTo>EFStyle__c</referenceTo>
        <relationshipLabel>EF Rows</relationshipLabel>
        <relationshipName>EFRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Index</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EF Row</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>